--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <a href="https://github.com/EduJCordeiro/filtroImg" target="_blank">
                         <div class="projeto">
                             <div class="view">ACESSAR GITHUB</div>
-                            <img class="imagem" src="images/filtro.png" alt="Filtro">
+                            <img class="imagem" src="images/filtro.PNG" alt="Filtro">
                             <div class="repositorio">Filtro de imagens <span title="Ano" class="ano">2019</span><span title="Linguagem" class="linguagem cs">C#</span></div>
                             <div class="descricao">Um aplicativo básico para aplicar alguns tipos de filtros em imagens.</div>
                         </div>
