--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </nav>
     <main>
-        <section id="inicio" class="inicio">
+        <header id="inicio" class="inicio">
             <div class="pagina">
                 <div class="titulo"><span>Olá!</span></div>
                 <div class="sobre">
@@ -40,7 +40,7 @@
                 <span>Projetos</span>
                 <i class="fas fa-angle-double-down"></i>
             </div>
-        </section>
+        </header>
         <section class="conteudo">
             <div class="pagina">
                 <div class="titulo">Projetos pessoais</div>
